--- a/index.html
+++ b/index.html
@@ -299,11 +299,11 @@
             <div class="section-title">My Projects/Interests</div>
             <a href="https://www.youtube.com/watch?v=4a7Kne25wgQ" class="project-card" style="background-image: url('https://framerusercontent.com/images/4i5LHoz9SChFPUWpsq7d5qz7yLM.png')">
                 <div class="project-title">Toxic World</div>
-                <div class="project-description">Welcome to Toxic World. The real world is poisoned, so humanity escapes into a massive virtual reality. But a hacker breaks in to destroy it... Will he succeed, or can the last world be saved?</div>
+                <div class="project-description">Welcome to Toxic World! A movie trailer I made for school! Click to watch!</div>
             </a>
             <a href="https://be.pcpartpicker.com/user/LD_15/saved/Cz9NvK" class="project-card" style="background-image: url('https://i.pinimg.com/736x/5a/92/45/5a924546591db4cca834e3a6baec9cb4.jpg">
                 <div class="project-title">PC</div>
-                <div class="project-description">Another exciting project: I built my own pc! Click on the image to see the parts list!</div>
+                <div class="project-description">I built my own pc! Click to see the parts list!</div>
             </a>
 
         </div>
