--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
             <div class="section-title">Me</div>
             <a href="" class="link" onclick="openModal('Website', 'My personal portfolio with everything in it!', 'https://larsdehairs.framer.website/', 'fas fa-globe', event)"><i class="fas fa-globe"></i>Website</a>
             <a href="" class="link" onclick="openModal('Instagram', 'More of me and my projects on Instagram!', 'https://www.instagram.com/larsdehairs/profilecard/?igsh=MWQ1Nnlrd2Zua2p4eQ%3D%3D', 'fab fa-instagram', event)"><i class="fab fa-instagram"></i>Instagram</a>
-            <a href="" class="link" onclick="openModal('Twitch', 'Watch my gaming streams on twitch!', 'https://www.twitch.tv/larzilla15', 'fab fa-twitch', event)"><i class="fab fa-twitch"></i>Twitch</a>
+            <a href="" class="link" onclick="openModal('Twitch', 'Watch my gaming streams on Twitch!', 'https://www.twitch.tv/larzilla15', 'fab fa-twitch', event)"><i class="fab fa-twitch"></i>Twitch</a>
             <a href="" class="link" onclick="openModal('GitHub', 'My coding journey and open-source projects on GitHub! Take a look!', 'https://github.com/LD-beepbeep', 'fab fa-github', event)"><i class="fab fa-github"></i>GitHub</a>
             <a href="" class="link" onclick="openModal('Spotify', 'Listen to my favorite tracks and playlists on Spotify!', 'https://open.spotify.com/user/31koe2edmw5men3gcsnwgpds4wgq?si=9200f38a03a04296', 'fab fa-spotify', event)"><i class="fab fa-spotify"></i>Spotify</a>
             <div class="section-title">My Projects/Interests</div>
@@ -334,7 +334,7 @@
             <a href="" class="link" onclick="openModal('Voc tester', 'This is a voc tester where you can add custom words to learn and practice them! Massive update coming by the way! ', 'https://ld-beepbeep.github.io/French-Words-2.0/', 'fa solid fa-school', event)"><i class="fa solid fa-school"></i>Voc Tester</a>
             <a href="" class="link" onclick="openModal('Fake Hacker', 'A fake hacker tool for fun and pranks! ', 'https://ld-beepbeep.github.io/Fake-Hacker/', 'fa solid fa-file-code', event)"><i class="fa solid fa-file-code"></i>Fake Hacker</a>
             <a href="" class="link" onclick="openModal('Neon Leap', 'Neon Leap is a fast-paced cyberpunk platformer where you leap, dash, and collect coins through glowing neon levels. Unlock new characters, backgrounds, and abilities as you master precision jumps and parkour your way through 100 unique stages, all set in a cool, retro-futuristic world!', 'https://ld-studios.itch.io/neon-leap', 'fa-solid fa-gamepad', event)"><i class="fa-solid fa-gamepad"></i>Neon Leap</a>
-            <a href="" class="link" onclick="openModal('Pixel Art', 'Just some random pixel art maker', 'https://ld-beepbeep.github.io/Pixel-art/', 'fa-solid fa-palette', event)"><i class="fa-solid fa-palette"></i>Pixel Art</a>
+            <a href="" class="link" onclick="openModal('Pixel Art', 'Just some random pixel art maker...', 'https://ld-beepbeep.github.io/Pixel-art/', 'fa-solid fa-palette', event)"><i class="fa-solid fa-palette"></i>Pixel Art</a>
             
         </div>
 
