--- a/index.html
+++ b/index.html
@@ -3,9 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LarsDehairs - Links</title>
+    <title>Lars Dehairs - Links</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <meta name="description" content="A brief description of your page content.">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="Lars Dehairs - Links">
+    <meta property="og:description" content="A place where you can look at my interests, links and more!">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://larsdehairs.links.com">
+    <meta property="og:image" content="https://lars.dehairs.com/image.png">
+
     <style>
         body {
             font-family: 'Roboto Mono', monospace;
